调整了一些字体和颜色,还有增加了footer

--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
     <div id="flag-display">
       <!-- 国旗图片会在这里动态加载 -->
       <h1>你认识多少个国旗？</h1>
-      <h2>作者: 朱青橙</h2>
+      <h2 class="text-normal text-info">Luna 设计制作</h2>
       <div><h2>请选择时间以开始游戏🎮</h2></div>
     </div>
     <div id="options-container">
@@ -49,6 +49,9 @@
       </td>
     </tr>
 </div>
+<footer style="text-align:center; display:block;">
+  <p class="text-bold text-large text-blue">© 2024 朱青橙; 指导老师: 于老师</p>
+</footer>
 <!-- 国家信息模态框 -->
 <div id="country-info-modal" class="modal">
   <div class="modal-content">
