--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
       <!-- 国旗图片会在这里动态加载 -->
       <h1>你认识多少个国旗？</h1>
       <h2 class="text-normal text-info">Luna 设计制作</h2>
-      <div><h2>请输入名字并选择时间以开始游戏</h2></div>
+      <div><h2></h2></div>
     </div>
     <div id="options-container">
       <!-- 四个选择按钮将在这里动态生成 -->
