--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
     <div id="flag-display">
       <!-- 国旗图片会在这里动态加载 -->
       <h1>你认识多少个国旗？</h1>
-      <h2 class="text-normal text-info">Luna 设计制作</h2>
+      <h2 class="text-normal text-info">猜国旗游戏</h2>
       <div><h2></h2></div>
     </div>
     <div id="options-container">
@@ -50,9 +50,9 @@
       </td>
     </tr>
 </div>
-<footer style="text-align:center; display:block;">
+<!-- <footer style="text-align:center; display:block;">
   <p class="text-bold text-large text-blue">© 2024 朱青橙; 指导老师: 于老师</p>
-</footer>
+</footer> -->
 <!-- 国家信息模态框 -->
 <div id="country-info-modal" class="modal">
   <div class="modal-content">
